--- a/psdaq/psdaq/cphw/CMakeLists.txt
+++ b/psdaq/psdaq/cphw/CMakeLists.txt
@@ -89,6 +89,18 @@ target_link_libraries(hsrCfg
     rt
 )
 
+#
+#  regtest
+#
+add_executable(regtest regtest.cc)
+
+target_link_libraries(regtest
+    dl
+    pthread
+    cphwr
+)
+
+
 install(TARGETS cphw
                 amc_timing
                 amc_timing_udp
