--- a/psdaq/psdaq/scripts/tprtest.cnf
+++ b/psdaq/psdaq/scripts/tprtest.cnf
@@ -1,15 +1,17 @@
 bin_path    = '/reg/neh/home/weaver/lcls2/psdaq/build/psdaq/app/'
 scripts_path = '/reg/neh/home/weaver/lcls2/psdaq/psdaq/scripts/'
 
-epics_host = 'daq-tst-dev04'
-epics_env = 'EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067'
-pcas_env = 'EPICS_CAS_INTF_ADDR_LIST=10.0.0.4'
+#epics_host = 'daq-tst-dev04'
+epics_host = 'drp-tst-acc04'
+epics_env = 'EPICS_CA_ADDR_LIST=172.21.42.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067'
+pcas_env = 'EPICS_CAS_INTF_ADDR_LIST=172.21.42.222'
 
 platform = '4'
 username = 'weaver'
 expname  = 'expname'
 expnum   = 'expnum'
 
+#tprhost  = 'daq-tst-dev04'
 tprhost  = 'drp-tst-acc04'
 
 # procmgr FLAGS: <port number> static port number to keep executable
