Package daq python to get ready for conda.  Start changing cnf files to use PATH to pickup conda releases

--- a/psdaq/psdaq/hsd/CMakeLists.txt
+++ b/psdaq/psdaq/hsd/CMakeLists.txt
@@ -157,6 +157,7 @@ install(TARGETS hsd
 		hsd_pgp
 		hsd_test
  		hsdRead
+ 		hsdPVs
     ARCHIVE DESTINATION lib
     LIBRARY DESTINATION lib
     RUNTIME DESTINATION bin
