--- a/psdaq/psdaq/cnf/lab3-caf-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-caf-cam.cnf
@@ -1,28 +1,23 @@
-bin_path  = '/reg/neh/home/weaver/lcls2/psdaq/build/'
-bins_path = '/reg/neh/home/weaver/lcls2/psdaq/psdaq/scripts/'
-procstat_path = '/reg/neh/home/weaver/lcls2/psdaq/psdaq/procmgr/'
+import os
+from psdaq.procmgr.ProcMgr import getRelEnvString
 
 platform = '1'
 username = 'lcls2'
 expname  = 'expname'
 expnum   = 'expnum'
 
-#epics_host = daq_tst_dev02
-epics_host = 'daq-tst-dev02'
+# can also set this environment in the shell.
+os.environ['TESTRELDIR'] = '/reg/neh/home/caf/daq/cpo5/lcls2/install'
 
-epics_env = 'EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067'
-pcas_env = 'EPICS_CAS_INTF_ADDR_LIST=10.0.0.2'
+epics_env = 'EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067 EPICS_CA_AUTO_ADDR_LIST=NO'
+conda_env = getRelEnvString()
+total_env = epics_env+conda_env
+
 shelf = '2'
 ip_addr = '10.0.'+shelf
-#qflags = 'sx'
-qflags = 's'
-
-cam_size = 320
 
 # procmgr FLAGS: <port number> static port number to keep executable
 #                              running across multiple start/stop commands.
-#                "X" open xterm
-#                "s" send signal to child when stopping
 #
 # HOST       UNIQUEID      FLAGS  COMMAND+ARGS
 # list of processes to run
@@ -34,29 +29,12 @@ cam_size = 320
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
-# { host: 'daq-tst-dev06', id:'camcfg-us0', flags:'s', cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/cLoopTest -T 0x80 -s %d'%cam_size+' -d /dev/pgpcam1 -L 0xf0'},
-# { host: 'daq-tst-dev06', id:'camcfg-us1', flags:'s', cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/cLoopTest -T 0x80 -s %d'%cam_size+' -d /dev/pgpcam0 -L 0xf0'},
-# { host: 'daq-tst-dev06', id:'camcfg-us2', flags:'s', cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/cLoopTest -T 0x80 -s %d'%cam_size+' -d /dev/pgpcam2 -L 0xf0'},
-# { host: 'daq-tst-dev06', id:'camcfg-us3', flags:'s', cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/cLoopTest -T 0x80 -s %d'%cam_size+' -d /dev/pgpcam5 -L 0xf0'},
- { host: 'daq-tst-dev06', id:'camcfg-us46', flags:'s', cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/cLoopTest -T 0x80 -s %d'%cam_size+' -d /dev/pgpcam4 -L 0xff'},
-# { host: 'daq-tst-dev04', id:'camcfg-us5', flags:'s', cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/qLoopTest -T 0x80 -s %d'%cam_size+' -d /dev/pgpdaq0 -L 0x0f'},
-
- {                       id:'partca-'+platform ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/partca.py DAQ:LAB2:PART:'+platform},
- {                       id:'modca'  ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/xpmca.py DAQ:LAB2:XPM:'+shelf},
- {                       id:'deadca-'+platform  ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/deadca.py DAQ:LAB2 '+platform+' '+shelf},
- {                       id:'dtica'  ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/dtica.py DAQ:LAB2:DTI:'+shelf},
-
-# { host: 'drp-tst-acc06', id:'qRead-ds0' ,flags:qflags, cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/qRead -d /dev/pgpdaq1 -c 0 -L 0xf -P 8' },
-# { host: 'drp-tst-acc05', id:'qRead-ds1' ,flags:qflags, cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/qRead -d /dev/pgpdaq1 -c 0 -L 0xf -P 8' },
-# drp-tst-acc04 has problems with /dev/pgpdaq1 pcie comm
-# { host: 'drp-tst-acc04', id:'qRead-ds2' ,flags:qflags, cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/qRead -d /dev/pgpdaq0 -c 0 -L 0xf -P 8' },
-# { host: 'drp-tst-acc03', id:'qRead-ds3' ,flags:qflags, cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/qRead -d /dev/pgpdaq1 -c 0 -L 0xf -P 8' },
-# { host: 'drp-tst-acc01', id:'qRead-ds4' ,flags:qflags, cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/qRead -d /dev/pgpdaq1 -c 0 -L 0xf -P 8' },
-# { host: 'drp-tst-acc01', id:'qRead-ds4' ,flags:qflags, cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/qRead -d /dev/pgpdaq1 -c 0 -L 0xf -P 8' },
-# { host: 'daq-tst-dev04', id:'qRead-ds5' ,flags:qflags, cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/qRead -d /dev/pgpdaq1 -c 0 -L 0xf -P 8' },
-# { host: 'daq-tst-dev01', id:'qRead-ds6' ,flags:qflags, cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/qRead -d /dev/pgpdaq0 -c 0 -L 0xf -P 8' },
-
-## procstat
- {                       id:'procstat',    flags:'sp',   cmd:procstat_path+'procstat.py -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
-  ]
-
+ {                        id:'partca-'+platform ,flags:'s', env:total_env, cmd:'partca DAQ:LAB2:PART:'+platform},
+ {                        id:'procstat', flags:'sp', env:conda_env, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
+ {                        id:'modca'  ,flags:'s', env:total_env, cmd:'xpmca DAQ:LAB2:XPM:'+shelf},
+ {                        id:'deadca-'+platform, flags:'s', env:total_env, cmd:'deadca DAQ:LAB2 '+platform+' '+shelf},
+ {                        id:'dtica', flags:'s', env:total_env, cmd:'dtica DAQ:LAB2:DTI:'+shelf},
+ { host: 'drp-tst-acc06', id:'collection', flags:'sxp', env:total_env, cmd:'collection -v' },
+ # trigger event builder
+ { host: 'drp-tst-acc02', id:'teb1', flags:'sp', env:conda_env, cmd:'tstEbBuilder -C drp-tst-acc06'}
+]
