Add memory map register test utility

--- a/psdaq/psdaq/mmhw/CMakeLists.txt
+++ b/psdaq/psdaq/mmhw/CMakeLists.txt
@@ -10,6 +10,12 @@ target_include_directories(mmhw PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
 )
 
+add_executable(mmregtest mmregtest.cc)
+
+target_include_directories(mmregtest PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+)
+
 install(TARGETS mmhw
     ARCHIVE DESTINATION lib
     LIBRARY DESTINATION lib
