install drp executable

--- a/psdaq/drp/CMakeLists.txt
+++ b/psdaq/drp/CMakeLists.txt
@@ -35,6 +35,12 @@ target_link_libraries(drp
     collection
 )
 
+install(TARGETS drp
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
+)
+
 #add_executable(pgpread2
 #    pgpread.cc
 #)
