add hsdduplicate utility for creating large hsd xtc files

--- a/xtcdata/xtcdata/app/CMakeLists.txt
+++ b/xtcdata/xtcdata/app/CMakeLists.txt
@@ -23,6 +23,13 @@ target_link_libraries(xtcsave
     xtc
 )
 
+add_executable(hsdduplicate
+    hsdduplicate.cc
+)
+target_link_libraries(hsdduplicate
+    xtc
+)
+
 add_executable(smdwriter
     smdwriter.cc
 )
