first pass as supporting event-built dgrams

--- a/xtcdata/xtcdata/xtc/CMakeLists.txt
+++ b/xtcdata/xtcdata/xtc/CMakeLists.txt
@@ -16,6 +16,9 @@ target_include_directories(xtc PUBLIC
 
 install(FILES
     Level.hh
+    NamesId.hh
+    NamesVec.hh
+    NameIndex.hh
     ShapesData.hh
     BlockDgram.hh
     Array.hh
