--- a/psdaq/psdaq/eb/tstEb.cnf
+++ b/psdaq/psdaq/eb/tstEb.cnf
@@ -1,5 +1,6 @@
 # -*-Mode: python;-*-
 
+import os, inspect
 from psdaq.procmgr.ProcMgr import getRelEnvString
 
 platform  = '3'
@@ -7,7 +8,17 @@ username  = 'claus'
 expname   = 'expname'
 expnum    = 'expnum'
 
-conda_rel = getRelEnvString()
+cnf_file  = inspect.getfile(inspect.currentframe())
+abs_path  = os.path.abspath(cnf_file)
+dir_path  = os.path.dirname(abs_path)
+repo_path = os.path.abspath(dir_path + '/../../..')
+inst_path = repo_path + '/install'
+print('Executing from', inst_path)
+
+# can also set this environment in the shell.
+os.environ['TESTRELDIR'] = inst_path
+
+conda_env = getRelEnvString()
 
 partition = 'Test'
 col_node  = 'drp-tst-acc06'
@@ -17,7 +28,7 @@ if headless:
 else:
   node_flags = 'sxp'
 
-skipNodes = [12, 6] #[12, 1, 5]
+skipNodes = [12, 10]
 nodes     = []
 nNodes    = 24
 for i in range(nNodes, 0, -1):
@@ -80,14 +91,14 @@ if can_run:
   # procstat
   if not headless:
     procmgr_config.append({id:    'procstat',
-                           flags: 'sp',
-                           env:   conda_rel,
+                           flags: 'p',
+                           env:   conda_env,
                            cmd:   mgr_cmd})
 
   procmgr_config.append({host:  col_node,
                          id:    'collection',
                          flags: 'sxp',
-                         env:   conda_rel,
+                         env:   conda_env,
                          cmd:   col_cmd})
 
   cnt  = 0
@@ -96,7 +107,7 @@ if can_run:
     cnt += 1
     procmgr_config.append({host:  "drp-tst-dev%03d" % i,
                            id:    'mon%d' % cnt,
-                           env:   conda_rel,
+                           env:   conda_env,
                            flags: node_flags,
                            cmd:   mon_cmd})
 
@@ -107,7 +118,7 @@ if can_run:
     cores = " -1 %d -2 %d" % (core + 2 * n, core + 1 + 2 * n)
     procmgr_config.append({host:  "drp-tst-dev%03d" % i,
                            id:    'evt%d' % cnt,
-                           env:   conda_rel,
+                           env:   conda_env,
                            flags: node_flags,
                            cmd:   evt_cmd+cores})
 
@@ -118,7 +129,7 @@ if can_run:
     cores = " -1 %d -2 %d" % (core + 2 * n, core + 1 + 2 * n)
     procmgr_config.append({host:  "drp-tst-dev%03d" % i,
                            id:    'seg%d' % cnt,
-                           env:   conda_rel,
+                           env:   conda_env,
                            flags: node_flags,
                            cmd:   seg_cmd+cores})
 
