--- a/psdaq/psdaq/eb/CMakeLists.txt
+++ b/psdaq/psdaq/eb/CMakeLists.txt
@@ -43,7 +43,7 @@ add_executable(ft_writemsg_server ft_writemsg_server.cc)
 
 add_executable(eblf_pingpong    eblf_pingpong.cc)
 
-#add_executable(tstEbLfLink      tstEbLfLink.cc)
+add_executable(tstEbLfLink      tstEbLfLink.cc)
 
 add_executable(ibMon            ibMon.cc)
 
@@ -101,11 +101,11 @@ target_link_libraries(eblf_pingpong
   eb
 )
 
-#target_link_libraries(tstEbLfLink
-#  eb
-#  pthread
-#  rt
-#)
+target_link_libraries(tstEbLfLink
+  eb
+  pthread
+  rt
+)
 
 target_link_libraries(ibMon
   zmq
