Remove event counter from dgram header

--- a/psdaq/psdaq/pgp/user-driver/CMakeLists.txt
+++ b/psdaq/psdaq/pgp/user-driver/CMakeLists.txt
@@ -29,6 +29,12 @@ add_executable(pgpread
     pgpread.cc
 )
 
+target_include_directories(pgpread PUBLIC
+    ../../../drp
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include>
+)
+
 target_link_libraries(pgpread
     pgpdriver
     xtcdata::xtc
