procmgr rcfile refinements. Add PROCSERVBIN and CONDABASE to procmgrd.conf rcfile template. Add procmgr -r <rcfile> option for setting rcfile path.

--- a/psdaq/psdaq/procmgr/procmgrd.conf
+++ b/psdaq/psdaq/procmgr/procmgrd.conf
@@ -1,4 +1,6 @@
 # procmgrd.conf
 PORTBASE=29000
 PROCMGRDBIN=/reg/common/package/procServ/2.6.0-SLAC/x86_64-rhel7-gcc48-opt/bin/procmgrd
+PROCSERVBIN=/reg/common/package/procServ/2.6.0-SLAC/x86_64-rhel6-gcc44-opt/bin/procServ
 PROCMGRDUSER=nobody
+CONDABASE=/reg/g/psdm/sw/conda2/inst
