--- a/psdaq/psdaq/cnf/lab3-weninc.cnf
+++ b/psdaq/psdaq/cnf/lab3-weninc.cnf
@@ -36,7 +36,9 @@ procmgr_config = [
  {                        id:'procstat', flags:'sp', env:conda_env, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
  {                        id:'modca'  ,flags:'s', env:total_env, cmd:'xpmca DAQ:LAB2:XPM:'+shelf},
  {                        id:'deadca-'+platform, flags:'s', env:total_env, cmd:'deadca DAQ:LAB2 '+platform+' '+shelf},
- {                        id:'dtica', flags:'s', env:total_env, cmd:'dtica DAQ:LAB2:DTI:'+shelf},
- { host: 'drp-tst-dev002', id:'teb1', flags:'sxp', env:total_env, cmd:'tstEbBuilder' },
+# {                        id:'dtica', flags:'s', env:total_env, cmd:'dtica DAQ:LAB2:DTI:'+shelf},
+ { host: 'drp-tst-dev001', id:'teb1', flags:'sxp', env:total_env, cmd:'tstEbBuilder' },
+# { host: 'drp-tst-dev002', id:'drp1', flags:'sxp', env:total_env, cmd:'drp -o /tmp -l 0xf -D AreaDetector' },
+# { host: 'drp-tst-dev003', id:'drp2', flags:'sxp', env:total_env, cmd:'drp -o /tmp -l 0xf -D AreaDetector' },
  { host: 'drp-tst-acc06', id:'Collection', flags:'sxp', env:total_env, cmd:'collection -v' },
 ]
